test/core/errors/identifiers_error/zs/clashing_identifiers/structure_name_first_lower_case_error.zs
package clashing_identifiers.structure_name_first_lower_case_error;

struct firstLowerCaseNotAllowed
{};
